day-167/skaffold-Implementation/k8s/core-service.yml
apiVersion: v1
kind: Service
metadata:
  name:  core-service
spec:
  selector:
    app:  core
  type: ClusterIP
  ports:
  - name: core-port
    port:  80
    targetPort:  3000
