day-167/skaffold-Implementation/k8s/core-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: queue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 80

          - path: /queue/notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
